# persistent-binary-search-tree

./: .gitignore  LICENSE  Makefile  README.md  bst.py  bst_tests.py  fp_fatnode_bst.py  fp_fatnode_bst_tests.py  package.json  pnpm-lock.yaml  pp_fatnode_bst.py  pp_fatnode_bst_tests.py  pp_path_copying_bst.py  pp_path_copying_bst_tests.py  pyproject.toml  pyrightconfig.json  requirements.txt  tsconfig.json  vitest.config.ts  wrangler.jsonc
app/: planar.py  utils.py
benchmarks/: benchmarks.py  memory.py  normal.py  partial_persistence.py
lib/: bst.py  fp_fatnode_bst.py  mod_record.py  ordered_list.py  pp_fatnode_bst.py  pp_naive_bst.py  pp_node_copying_bst.py
lib/binary_search_tree/: __init__.py  bst.py
lib/full_persistence/: fp_fatnode_bst.py
lib/ordered_list/: __init__.py
lib/partial_persistence/: pp_fatnode_bst.py  pp_path_copying_bst.py
ordered_list/: ordered_list.py  test.py
slides/: package-lock.json  package.json  slides.md
src/: index.ts  main.tsx
src/app/: App.tsx  router.tsx  styles.css
src/persistent/: modification-record.ts  partial-persistent-bst.ts  persistent-node.ts
tests/: bst-operation-history.test.tsx  bst-tree-view.test.tsx  bst-visualizer.test.ts  graph-canvas.test.tsx  partial-persistent-bst.test.ts  persistent-tree-view.test.tsx  point-location.test.ts  router-shell.test.tsx  test_binary_search_tree.py  test_full_persistence.py  test_ordered_list.py  test_partial_persistence.py  vec.test.ts  visualizer.test.ts
typescript/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+50 files in other folders)
