[project]
name = "persistent-binary-search-tree"
version = "0.1.0"
description = "Persistent binary search tree implementation in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "networkx",
    "PyWavefront",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-html",
    "pytest-metadata",
]
benchmark = [
    "memray",
    "numpy",
]

[tool.uv]
package = false
